--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ th {
      <button class="button2 center-block" data-toggle="collapse" data-target="#Mario2D">Mario Style 2D game</button>
            </div>
             <div class="col-md-11 collapse" id="Mario2D">
-                <p class="ProjectData"><h4 style="text-align:center;">Developed a 2D style mario game </p></h4>
+                <p class="ProjectData"><h4 style="text-align:center;">Developed a 2D style mario game. </p></h4>
             </div> 	
 	
 <div class="mar2"></div>
