--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="viewport" contet="width=device-width,intial scale=1">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <link rel="stylesheet" href="/lib/w3.css">
 
@@ -258,12 +258,12 @@ th {
  <div class="mar"><h3 style="text-align:left;">University of Bridgeport</h3>
   <p style="text-align:left"><h4>Master's of Science<br>
  		             Major:Computer Science<br>
-			     Expected Graduation: May 			     2017<br></h4></p></div>
+			     Graduation Date: May 2017<br></h4></p></div>
 
 <div class="mar"><h3 style="text-align:left;">Mumbai University</h3>
   <p style="text-align:left"><h4>Bachelor in Engineering<br>
  		             Major:Information Technology<br>
-			     Graduation date: May 2014 			     <br></h4></p></div>
+			     Graduation date: May 2014<br></h4></p></div>
 </div>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
