--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ th {
 <div class="mar"><h3 style="text-align:left;">Mumbai University</h3>
   <p style="text-align:left"><h4>Bachelor in Engineering<br>
  		             Major:Information Technology<br>
-			     Graduation date: May 2014<br></h4></p></div>
+			     Graduation Date: May 2014<br></h4></p></div>
 </div>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
