--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ Record and upload lectures online.<br>
 <div id:"resume"></div>
 <div class="mar2"></div>
    
-<a href="Reynold Resume.pdf" download="ReynoldResume">
+<a href="Reynold Web Resume.docx" download="ReynoldResume">
 <div class="center">
 <div class="containerme">
 <img src="Me.jpg" alt="ME" width="300" height="300">
